--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,100 @@
  * Site Styles
  *****************************************************************************/
 
- html {
-     color: green;
- }
+html {
+  padding: 0;
+}
+
+body {
+  margin: 0;
+  font-family: 'verdana', sans-serif;
+  color: #f2efef;
+  background: #a8dae2;
+}
+
+header {
+  min-height: 400px;
+  background-image: url('../img/monkaa_title.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+#social {
+  position: absolute;
+  top: 50px;
+  right: 0;
+  width: 25px;
+  transition: 2s width;
+  background: #a8dae2;
+}
+
+#social:hover {
+  width: 250px;
+}
+
+#social ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+#social li {
+  margin: 0;
+  padding: 0;
+}
+
+.main-nav {
+  list-style-type: none;
+  float: center;
+  overflow: hidden;
+  text-align: center;
+}
+
+.main-nav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  text-decoration: none;
+  font-size: 17px;
+  display: inline-block;
+  width: 200px;
+  float: center;
+  padding: 250px;
+  display: inline-block center;
+}
+
+.main-nav li a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.main-nav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.lead {
+  padding: 25px;
+  text-shadow: 1px 2px gray;
+}
+
+.download-button {
+  padding: 25px;
+}
+
+.weybec-people {
+  list-style-type: none; 
+  float: center;
+  text-align: center;
+}
+#info {
+  padding: 25px;
+}
+#project {
+  padding: 25px;
+}
+footer {
+  padding: 25px; 
+  text align: center;
+}
